--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
       </div>
     </div>
 
-    <div class="row main_banner">
+    <div class="main_banner">
       <div class="banner_image">
         <img src="images/research_banner.png" alt=""> 
       </div>
@@ -150,7 +150,7 @@
         </div>
     </div>
 
-    <div class="view_btn row">
+    <div class="view_btn">
         <div>View all &nbsp; <i class="fas fa-angle-down"></i></div>
     </div>
     
@@ -190,11 +190,7 @@
             </ul>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="copyright">
-      <div class="container">
-          <p>Copyright © 2017 HURPEES. All Rights Reserved. </p>
+        <p class="copyright">Copyright © 2017 HURPEES. All Rights Reserved. </p>
       </div>
     </div>
 
