--- a/founding_member.html
+++ b/founding_member.html
@@ -137,14 +137,14 @@
     <div class="founding_item">
           <div class=" container">
             <div class="row">
-              <div class="col-md-3">
+              <div class="col-lg-3 col-md-6">
                 <h3>FOUNDING CHAIRPERSON</h3>
                 <div class="person">
                     <img src="images/former.png" alt="">
                 </div>
             </div>
 
-              <div class="founding_content col-md-9">
+              <div class="founding_content col-lg-9 col-md-12">
                 <h1>Krishna Pahadi</h1>  
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Metus, pellentesque consequat purus fermentum porta nullam. Dolor quis turpis faucibus nulla nunc.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Metus, pellentesque consequat purus fermentum porta nullam. Dolor quis turpis faucibus nulla nunc.</p>
                 <ul class="news_social">
@@ -163,7 +163,7 @@
               <div class="row">
                 
   
-                <div class="founding_content col-md-9">
+                <div class="founding_content col-lg-9 col-md-12">
                   <h1>Krishna Pahadi</h1>  
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Metus, pellentesque consequat purus fermentum porta nullam. Dolor quis turpis faucibus nulla nunc.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Metus, pellentesque consequat purus fermentum porta nullam. Dolor quis turpis faucibus nulla nunc.</p>
                   <ul class="news_social">
@@ -275,7 +275,7 @@
             </ul>
           </div>
         </div>
-        <p class="copyright">Copyright © 2017 HURPEES. All Rights Reserved. </p>
+        <p class="copyright">Copyright © 2017 HURPES. All Rights Reserved. </p>
       </div>
     </div>
     
