--- a/gallery.html
+++ b/gallery.html
@@ -134,47 +134,48 @@
     </div>
 
     <div class="container">
-        <div class="about row">
-            <div class="col-md-8">
-                <div class="wide_img">
-                    <img src="images/pc1.png" alt="">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="wide_img">
-                    <img src="images/pc2.png" alt="">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="wide_img">
-                    <img src="images/pc3.png" alt="">
-                </div>
-            </div>
-            <div class="col-md-8">
-                <div class="wide_img">
-                    <img src="images/pc4.png" alt="">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="wide_img">
-                    <img src="images/pc2.png" alt="">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="wide_img">
-                    <img src="images/pc2.png" alt="">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="wide_img">
-                    <img src="images/pc2.png" alt="">
-                </div>
-            </div>
-
+        <div class="row">
+          <!-- <div class="about"> -->
+              <div class="col-md-8">
+                  <div class="wide_img">
+                      <img src="images/pc1.png" alt="">
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="wide_img">
+                      <img src="images/pc2.png" alt="">
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="wide_img">
+                      <img src="images/pc3.png" alt="">
+                  </div>
+              </div>
+              <div class="col-md-8">
+                  <div class="wide_img">
+                      <img src="images/pc4.png" alt="">
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="wide_img">
+                      <img src="images/pc2.png" alt="">
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="wide_img">
+                      <img src="images/pc2.png" alt="">
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="wide_img">
+                      <img src="images/pc2.png" alt="">
+                  </div>
+              </div>
+          <!-- </div> -->
         </div>
     </div>
 
-    <div class="view_btn row">
+    <div class="view_btn">
         <div>View all &nbsp; <i class="fas fa-angle-down"></i></div>
     </div>
 
