--- a/objective.html
+++ b/objective.html
@@ -122,19 +122,19 @@
             <div class="banner_image">
               <img src="images/obj.png" alt="">
             </div>
-            <div class="container"> 
                 <div class="objective_title">
                 <span>OBJECTIVE</span>
                 </div>
-            </div>
     </div>
 
     <div class="container">
-        <div class="head_award row">
-            <div class="title">
-                <h3>What do we do</h3>
-                <p>HURPES is a membership based volunteer organization conducting research and campaigns. Peace Society is a non-governmental, non-political and non-profit independent volunteer organization with a focus on non-violence, peace, human rights & democracy. </p>
-            </div>
+        <div class="row">
+          <div class="head_award">
+              <div class="title">
+                  <h3>What do we do</h3>
+                  <p>HURPES is a membership based volunteer organization conducting research and campaigns. Peace Society is a non-governmental, non-political and non-profit independent volunteer organization with a focus on non-violence, peace, human rights & democracy. </p>
+              </div>
+          </div>
         </div>
     </div>
 
@@ -208,8 +208,6 @@
   </div>
 </div>  
     </div>
-
-    
 
     <div class="view_btn">
         <div>View all &nbsp; <i class="fas fa-angle-down"></i></div>
